[feature] remove nohup log